force-app/main/default/objects/Export_Log__c/Export_Log__c.object-meta.xml
<CustomObject>
    <label>Export Log</label>
    <nameField>
        <displayFormat>EL-{00000}</displayFormat>
        <label>Export Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Export Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>