force-app/main/default/objects/Export_Log__c/fields/Client_Account__c.field-meta.xml
<CustomField>
    <fullName>Client_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Export Logs</relationshipLabel>
    <relationshipName>Client_Export_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>