force-app/main/default/objects/Export_Log__c/fields/Consent_Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>Consent_Validation_Status__c</fullName>
    <label>Consent Validation Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Passed</fullName>
                <default>true</default>
                <label>Passed</label>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>