force-app/main/default/objects/Export_Log__c/fields/Download_Count__c.field-meta.xml
<CustomField>
    <fullName>Download_Count__c</fullName>
    <label>Download Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>