force-app/main/default/objects/Export_Log__c/fields/Export_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Export_File_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Export File Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>