force-app/main/default/objects/Export_Log__c/fields/Export_Status__c.field-meta.xml
<CustomField>
    <fullName>Export_Status__c</fullName>
    <label>Export Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
                <default>true</default>
                <label>Created</label>
            </value>
            <value>
                <fullName>Downloaded</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
            <value>
                <fullName>Exception</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>