force-app/main/default/objects/Export_Log__c/fields/Export_Type__c.field-meta.xml
<CustomField>
    <fullName>Export_Type__c</fullName>
    <label>Export Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Authorized List</fullName>
                <default>true</default>
                <label>Authorized List</label>
            </value>
            <value>
                <fullName>Report Export</fullName>
            </value>
            <value>
                <fullName>File Download</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>