force-app/main/default/objects/Export_Log__c/fields/Exported_At__c.field-meta.xml
<CustomField>
    <fullName>Exported_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Exported At</label>
    <type>DateTime</type>
</CustomField>