force-app/main/default/objects/Export_Log__c/fields/Exported_By__c.field-meta.xml
<CustomField>
    <fullName>Exported_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exported By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Export Logs</relationshipLabel>
    <relationshipName>User_Export_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>