force-app/main/default/objects/Export_Log__c/fields/Last_Downloaded_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Downloaded_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Downloaded At</label>
    <type>DateTime</type>
</CustomField>