force-app/main/default/objects/Export_Log__c/fields/Retention_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Retention_Expiry_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Retention Expiry Date</label>
    <type>Date</type>
</CustomField>