force-app/main/default/objects/Export_Log__c/fields/Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Review_Status__c</fullName>
    <label>Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
                <default>true</default>
                <label>Not Required</label>
            </value>
            <value>
                <fullName>Pending Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Exception</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>