force-app/main/default/objects/Export_Log__c/fields/Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Reviewed Export Logs</relationshipLabel>
    <relationshipName>Reviewed_Export_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>