force-app/main/default/objects/Export_Log__c/fields/Source_Case__c.field-meta.xml
<CustomField>
    <fullName>Source_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Export Logs</relationshipLabel>
    <relationshipName>Export_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>