force-app/main/default/objects/Export_Log__c/fields/Source_IP__c.field-meta.xml
<CustomField>
    <fullName>Source_IP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Source IP</label>
    <length>64</length>
    <type>Text</type>
</CustomField>